--- a/.gitignore
+++ b/.gitignore
@@ -102,3 +102,24 @@ venv.bak/
 
 # mypy
 .mypy_cache/
+
+# mine
+*.sh
+*.bat
+*.lnk
+*.sqlite
+*.db
+*.ppr
+*.e4p
+*.npp
+*~
+backup
+archive.list
+
+# index_flask
+flask.ini
+wsgi.py
+wsgi_debug.py
+index_flask_qr.service
+index_flask_qr/test/
+index_flask_qr/templates/custom
